--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="box">
         <button class="btn1">Button 1</button>
         <button class="btn2">Button 2</button>
+        <button class="btn3">Button 3</button>
     </div>
 </body>
 </html>
